animations and sounds

--- a/timetab/src/css/App.css
+++ b/timetab/src/css/App.css
@@ -14,10 +14,26 @@
     justify-content: center;
 }
 
+/* Settings */
+
 .settings-modal {
   max-width: 100%;
   min-width: 800px;
 }
+
+.ReactModal__Overlay {
+  opacity: 0;
+  transition: opacity 150ms ease-in-out;
+}
+
+.ReactModal__Overlay--after-open{
+  opacity: 1;
+}
+
+.ReactModal__Overlay--before-close{
+  opacity: 0;
+}
+
 
 /* Footer */
 
