--- a/timetab/src/css/Clock.css
+++ b/timetab/src/css/Clock.css
@@ -16,7 +16,7 @@
 .timer {
     /*margin: 0 auto 30px auto;
     width: 100%;*/
-    border: 1px solid white;
+    border: 1px solid var(--color-on-background);
     border-radius: 16px;
     padding: 8px 24px;
     margin-bottom: 24px;
