--- a/timetab/src/css/Settings.css
+++ b/timetab/src/css/Settings.css
@@ -17,20 +17,38 @@ section {
 
 .lang-chip {
     margin-right: 8px;
+    border-color: black;
+    font-weight: bold;
+    color:red;
+}
+
+.location-input {
+    width: 120px;
+}
+
+.please-share {
+    display: flex;
+    align-items: center;
 }
 
 .theme-box {
     display: inline-block;
     width: 100px;
-    height: 100px;
+    height: 86px;
     padding: 8px;
     margin: 4px;
     cursor: pointer;
+    overflow: hidden;
 }
 .theme-box--img {
+    padding: 0;
     width: 100%;
-    height: 55px;
+    height: 50px;
     background-size: cover;
     background-color: khaki;
     overflow: hidden;
+}
+
+.mi-clase {
+    background-color: red;
 }
