--- a/timetab/src/css/Settings.css
+++ b/timetab/src/css/Settings.css
@@ -6,6 +6,20 @@ section {
     margin-bottom: 16px;
 }
 
+h2 {
+    margin: 0 0 20px 0;
+    font-family: var(--font-main);
+    font-size: 18px;
+    font-weight: 400;
+}
+h3 {
+    padding: 8px;
+    margin: 0;
+    font-family: var(--font-main);
+    font-size: 14px;
+    font-weight: 200;
+}
+
 .btn-close {
     cursor: pointer;
     opacity: 0.7;
@@ -29,6 +43,12 @@ section {
 .please-share {
     display: flex;
     align-items: center;
+    font-family: var(--font-secondary);
+    font-size: 12px;
+    white-space: pre-wrap;
+}
+.please-share a {
+    white-space: pre-wrap;
 }
 
 .theme-box {
@@ -43,12 +63,8 @@ section {
 .theme-box--img {
     padding: 0;
     width: 100%;
-    height: 50px;
+    height: 54px;
     background-size: cover;
     background-color: khaki;
     overflow: hidden;
-}
-
-.mi-clase {
-    background-color: red;
 }
