--- a/timetab/src/css/index.css
+++ b/timetab/src/css/index.css
@@ -4,7 +4,7 @@
 
   --background-image: none;
   --background-image-small: none;
-  --color-background: #fafce0;
+  --color-background: #ffffff;
   --color-surface: #edf0be;
   --color-on-background: #202020;
   --color-on-background-shadow: #ffffff83;
